--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -20,6 +20,7 @@ repositories {
 
 dependencies {
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
+    implementation 'androidx.annotation:annotation:1.1.0'
     implementation 'org.openftc:easyopencv:1.4.1'
     implementation 'com.arcrobotics:ftclib:1.0.1'
 }
