--- a/TeamCode/build.release.gradle
+++ b/TeamCode/build.release.gradle
@@ -6,4 +6,7 @@ dependencies {
     implementation (name: 'tfod-release', ext:'aar')
     implementation (name: 'tensorflow-lite-0.0.0-nightly', ext:'aar')
     implementation 'com.arcrobotics:ftclib:1.0.1'
+    implementation 'com.acmerobotics.roadrunner:core:0.5.2'
+    implementation 'com.acmerobotics.dashboard:dashboard:0.3.10'
+    implementation 'org.apache.commons:commons-math3:3.6.1'
 }
